# FastNViewTriangulation

./: CMakeLists.txt  README.md  fast_multiview_triangulation_mex.mexa64  test_Fast_Nview_Triangulation.m
examples/: CMakeLists.txt  example_base.cpp  fast_multiview_triangulation_mex.cpp  main.cpp
include/: NViewsCertifier.h  NViewsClass.h  NViewsTypes.h  NViewsUtils.h  definitions.h  definitions.hpp
src/: NViewsCertifier.cpp  NViewsClass.cpp  NViewsUtils.cpp
tests/: CMakeLists.txt  experimentsHelper.h  generic_test.cpp
utils/: ceresSolver.h  generatePointCloud.cpp  generatePointCloud.h
